--- a/package.json
+++ b/package.json
@@ -1,75 +1,75 @@
 {
-  "name": "DeliveryDotways",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
-  "private": true,
-  "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
-  },
-  "dependencies": {
-    "@angular/common": "5.0.3",
-    "@angular/compiler": "5.0.3",
-    "@angular/compiler-cli": "5.0.3",
-    "@angular/core": "5.0.3",
-    "@angular/forms": "5.0.3",
-    "@angular/http": "5.0.3",
-    "@angular/platform-browser": "5.0.3",
-    "@angular/platform-browser-dynamic": "5.0.3",
-    "@ionic-native/camera": "^4.7.0",
-    "@ionic-native/core": "4.4.0",
-    "@ionic-native/facebook": "^4.7.0",
-    "@ionic-native/file-transfer": "^4.7.0",
-    "@ionic-native/geolocation": "^4.5.3",
-    "@ionic-native/google-plus": "^4.7.0",
-    "@ionic-native/local-notifications": "^4.7.0",
-    "@ionic-native/splash-screen": "4.4.0",
-    "@ionic-native/status-bar": "4.4.0",
-    "@ionic/storage": "2.1.3",
-    "cordova-android": "^7.0.0",
-    "cordova-ios": "^4.5.4",
-    "cordova-plugin-device": "^2.0.1",
-    "cordova-plugin-facebook4": "^1.10.0",
-    "cordova-plugin-geolocation": "^4.0.1",
-    "cordova-plugin-googleplus": "^5.3.0",
-    "cordova-plugin-ionic-keyboard": "^2.0.5",
-    "cordova-plugin-ionic-webview": "^1.1.16",
-    "cordova-plugin-local-notification": "^0.9.0-beta.2",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "ionic-angular": "3.9.2",
-    "ionicons": "3.0.0",
-    "marker-animate-unobtrusive": "^0.2.8",
-    "rxjs": "5.5.2",
-    "sw-toolbox": "3.6.0",
-    "typings": "^2.1.1",
-    "zone.js": "0.8.18"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "3.1.8",
-    "typescript": "2.4.2"
-  },
-  "description": "An Ionic project",
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-geolocation": {
-        "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
-      },
-      "cordova-plugin-whitelist": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-googleplus": {},
-      "cordova-plugin-facebook4": {
-        "APP_ID": "2151809161716884",
-        "APP_NAME": "DDW"
-      }
+    "name": "DeliveryDotways",
+    "version": "0.0.1",
+    "author": "wssl bmz",
+    "homepage": "",
+    "private": true,
+    "scripts": {
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "lint": "ionic-app-scripts lint",
+        "ionic:build": "ionic-app-scripts build",
+        "ionic:serve": "ionic-app-scripts serve"
     },
-    "platforms": []
-  }
+    "dependencies": {
+        "@angular/common": "5.0.3",
+        "@angular/compiler": "5.0.3",
+        "@angular/compiler-cli": "5.0.3",
+        "@angular/core": "5.0.3",
+        "@angular/forms": "5.0.3",
+        "@angular/http": "5.0.3",
+        "@angular/platform-browser": "5.0.3",
+        "@angular/platform-browser-dynamic": "5.0.3",
+        "@ionic-native/camera": "^4.7.0",
+        "@ionic-native/core": "4.4.0",
+        "@ionic-native/facebook": "^4.7.0",
+        "@ionic-native/file-transfer": "^4.7.0",
+        "@ionic-native/geolocation": "^4.5.3",
+        "@ionic-native/google-plus": "^4.7.0",
+        "@ionic-native/local-notifications": "^4.7.0",
+        "@ionic-native/splash-screen": "4.4.0",
+        "@ionic-native/status-bar": "4.4.0",
+        "@ionic/storage": "2.1.3",
+        "cordova-android": "^7.0.0",
+        "cordova-ios": "^4.5.4",
+        "cordova-plugin-device": "^2.0.1",
+        "cordova-plugin-facebook4": "^1.10.0",
+        "cordova-plugin-geolocation": "^4.0.1",
+        "cordova-plugin-googleplus": "^5.3.0",
+        "cordova-plugin-ionic-keyboard": "^2.0.5",
+        "cordova-plugin-ionic-webview": "^1.1.16",
+        "cordova-plugin-local-notification": "^0.9.0-beta.2",
+        "cordova-plugin-splashscreen": "^5.0.2",
+        "cordova-plugin-whitelist": "^1.3.3",
+        "ionic-angular": "3.9.2",
+        "ionicons": "3.0.0",
+        "marker-animate-unobtrusive": "^0.2.8",
+        "rxjs": "5.5.2",
+        "sw-toolbox": "3.6.0",
+        "typings": "^2.1.1",
+        "zone.js": "0.8.18"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "3.1.8",
+        "typescript": "2.4.2"
+    },
+    "description": "An Ionic project",
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-geolocation": {
+                "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
+            },
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-ionic-webview": {},
+            "cordova-plugin-ionic-keyboard": {},
+            "cordova-plugin-googleplus": {},
+            "cordova-plugin-facebook4": {
+                "APP_ID": "2151809161716884",
+                "APP_NAME": "DDW"
+            }
+        },
+        "platforms": []
+    }
 }
